Add menu Laporan

--- a/src/kasir/Admin.form
+++ b/src/kasir/Admin.form
@@ -67,6 +67,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Laporan"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="LaporanMenuMouseClicked"/>
+          </Events>
         </Menu>
         <Menu class="javax.swing.JMenu" name="AccountMenu">
           <Properties>
